@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.44 2006/09/30 16:36:35 yooden Exp $
+$Id: ReleaseNotes,v 1.45 2006/09/30 16:54:44 yooden Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -63,6 +63,9 @@ Bugs fixed in $NEXT_VERSION
 
   - Various documentation bugs are fixed (SF bugs #1066765, #1078397, #1110024,
     #1471868)
+
+  - NEdit no longer checks the language modes for documents on the first
+    save if the user already picked one (SF bug #1371896).
 
 New features in 5.5 
 
